# abm-for-dating-market

./: .gitignore  README.md  agent.py  main.py  matchmaking.py  pyproject.toml  requirements.txt
src/: run_simulation.py
src/agents/: base.py  simple.py  simple_agent.py  simple_random.py
src/dating_graph/: barabasi_albert_network.py  dating_graph.py  dating_network.py  uniform_random_network.py
src/matchmaking/: base.py  random_uniform.py
src/models/: simulation.py
src/pairing/: base.py  random_uniform.py
src/utils/: __init__.py
