[project]
name = "abm-for-dating-market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rustworkx>=0.17.1",
    "scipy>=1.16.3",
    "sortedcontainers>=2.4.0",
]

[dependency-groups]
dev = [
    "scipy-stubs>=1.16.3.0",
    "sortedcontainers-stubs>=2.4.3",
]
